--- a/tools/kevoree-web-editor/package.json
+++ b/tools/kevoree-web-editor/package.json
@@ -22,7 +22,8 @@
     "npm": "1.3.18",
     "async": "~0.2.9",
     "semver": "~2.2.1",
-    "ejs": "~0.8.5"
+    "ejs": "~0.8.5",
+    "rimraf": "~2.2.5"
   },
   "devDependencies": {
     "jade-amd": "~0.2.1"
