update URLs to github repo from dukeboard to kevoree (using organization now)

--- a/platform/browser/package.json
+++ b/platform/browser/package.json
@@ -5,7 +5,7 @@
   "main": "./server.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/dukeboard/kevoree-js"
+    "url": "http://github.com/kevoree/kevoree-js"
   },
   "keywords": [
     "kevoree",
