--- a/core/kevoree-library/package.json
+++ b/core/kevoree-library/package.json
@@ -10,11 +10,11 @@
   ],
   "contributors": [],
   "bugs": {
-    "url": "https://github.com/dukeboard/kevoree-js/issues"
+    "url": "https://github.com/kevoree/kevoree-js/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dukeboard/kevoree-js"
+    "url": "https://github.com/kevoree/kevoree-js"
   },
   "devDependencies": {},
   "optionalDependencies": {},
