--- a/core/kevoree-model-sync/package.json
+++ b/core/kevoree-model-sync/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dukeboard/kevoree-js.git"
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
   "keywords": [
     "kevoree",
@@ -20,7 +20,7 @@
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL3.0",
   "bugs": {
-    "url": "https://github.com/dukeboard/kevoree-js/issues"
+    "url": "https://github.com/kevoree/kevoree-js/issues"
   },
   "dependencies": {
     "kevoree-core": "0.0.4",
