--- a/core/kevoree-resolvers/package.json
+++ b/core/kevoree-resolvers/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dukeboard/kevoree-js"
+    "url": "https://github.com/kevoree/kevoree-js"
   },
   "keywords": [
     "kevoree",
@@ -19,9 +19,9 @@
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL-3.0",
   "bugs": {
-    "url": "https://github.com/dukeboard/kevoree-js/issues"
+    "url": "https://github.com/kevoree/kevoree-js/issues"
   },
-  "homepage": "https://github.com/dukeboard/kevoree-js",
+  "homepage": "https://github.com/kevoree/kevoree-js",
   "dependencies": {
     "kevoree-commons": "0.0.1",
     "kevoree-library": "0.0.3"
