--- a/extras/kevoree-kotlin/package.json
+++ b/extras/kevoree-kotlin/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dukeboard/kevoree-js.git"
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
   "keywords": [
     "kevoree",
