--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dukeboard/kevoree-js"
+    "url": "https://github.com/kevoree/kevoree-js"
   },
   "keywords": [
     "kevoree",
