--- a/platform/browser/package.json
+++ b/platform/browser/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kevoree-browser-runtime",
   "version": "0.0.1",
-  "description": "Kevoree Browser Runtime Server - lightweight server implem for Kevoree Browser Runtime",
-  "main": "./server.js",
+  "description": "Kevoree Browser Runtime",
+  "browser": "./client/kevoree-browser-runtime.js",
   "repository": {
     "type": "git",
     "url": "http://github.com/kevoree/kevoree-js"
@@ -16,8 +16,6 @@
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL3.0",
   "dependencies": {
-    "kevoree-library": "0.0.3",
-    "kevoree-kotlin": "0.0.2",
     "kevoree-nodejs-runtime": "0.0.2",
     "kevoree-model-sync": "0.0.2",
     "express": "~3.4.0",
@@ -28,12 +26,21 @@
     "npm": "1.3.18",
     "jade": "~0.35.0",
     "brfs": "0.0.8",
-    "connect": "~2.11.0"
+    "connect": "~2.11.0",
+    "kevoree-library": "0.0.3",
+    "kevoree-core": "0.0.4",
+    "kevoree-kotlin": "0.0.1",
+    "kevoree-commons": "0.0.1",
+    "pseudoclass": "0.2.6",
+    "async": "~0.2.9",
+    "date-format-lite": "~0.5.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-express": "~1.2.0"
+    "grunt": "~0.4.2",
+    "grunt-express": "~1.2.1",
+    "browserify": "~3.20.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-copy-to": "0.0.10",
+    "grunt-browserify": "~1.3.0"
   }
 }
