--- a/platform/browser/package.json
+++ b/platform/browser/package.json
@@ -16,7 +16,7 @@
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL3.0",
   "dependencies": {
-    "kevoree-nodejs-runtime": "0.0.2",
+    "kevoree-nodejs-runtime": "0.0.3",
     "kevoree-model-sync": "0.0.3",
     "express": "~3.4.0",
     "ejs": "~0.8.4",
@@ -33,7 +33,8 @@
     "kevoree-commons": "0.0.1",
     "pseudoclass": "0.2.6",
     "async": "~0.2.9",
-    "date-format-lite": "~0.5.0"
+    "date-format-lite": "~0.5.0",
+    "npmi": "0.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
