using npmi with getJSONModel in kevoree-model-sync

--- a/core/kevoree-model-sync/package.json
+++ b/core/kevoree-model-sync/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "kevoree-core": "0.0.4",
-    "npm": "1.3.18",
     "ws": "~0.4.31",
-    "kevoree-library": "0.0.3"
+    "kevoree-library": "0.0.3",
+    "npmi": "0.0.4"
   }
 }
