--- a/platform/browser/package.json
+++ b/platform/browser/package.json
@@ -27,9 +27,9 @@
     "jade": "~0.35.0",
     "brfs": "0.0.8",
     "connect": "~2.11.0",
-    "kevoree-library": "0.0.3",
+    "kevoree-library": "*",
     "kevoree-core": "0.0.4",
-    "kevoree-kotlin": "0.0.1",
+    "kevoree-kotlin": "0.0.3",
     "kevoree-commons": "0.0.1",
     "pseudoclass": "0.2.6",
     "async": "~0.2.9",
