--- a/core/kevoree-model-sync/package.json
+++ b/core/kevoree-model-sync/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "kevoree-core": "0.0.4",
     "ws": "~0.4.31",
-    "kevoree-library": "0.0.3",
+    "kevoree-library": "*",
     "npmi": "0.0.4"
   }
 }
