--- a/platform/nodejs/package.json
+++ b/platform/nodejs/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "kevoree-core": "0.0.4",
-    "kevoree-library": "0.0.3",
+    "kevoree-library": "*",
     "kevoree-commons": "0.0.1",
     "pseudoclass": "0.2.6",
     "npm": "1.3.18",
     "optimist": "~0.6.0",
-    "kevoree-kevscript": "0.0.4",
+    "kevoree-kevscript": "0.0.10",
     "kevoree-resolvers": "0.0.2"
   },
   "license": "LGPL-3.0"
