--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <kmf.version>1.9.6</kmf.version>
+        <kmf.version>1.9.12-SNAPSHOT</kmf.version>
         <kevoree.version>3.1.0</kevoree.version>
     </properties>
 
