--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "kevoree-entities": ">= 0.0.3",
-    "kevoree-library": "0.0.3",
+    "kevoree-library": "*",
     "optimist": ">= 0.6.0",
     "npm": "1.3.18"
   },
