--- a/tools/kevoree-web-editor/package.json
+++ b/tools/kevoree-web-editor/package.json
@@ -17,7 +17,7 @@
     "mocha": "1.12.0",
     "requirejs": "2.1.8",
     "xml2js": "0.2.8",
-    "kevoree-library": ">= 0.0.3",
+    "kevoree-library": "*",
     "kevoree-model-sync": "0.0.4",
     "npm": "1.3.18",
     "async": "~0.2.9",
