--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -1,16 +1,16 @@
 {
   "name": "kevoree-gen-model",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "kevoree-entities": ">= 0.0.3",
+    "kevoree-entities": "*",
     "kevoree-library": "*",
     "optimist": ">= 0.6.0",
-    "npm": "1.3.18"
+    "npm": "1.4.4"
   },
   "devDependencies": {
     "pseudoclass": "0.2.6"
@@ -32,8 +32,8 @@
   "license": "LGPL3.0",
   "maintainers": [
     {
-        "name": "leiko",
-        "email": "max.tricoire@gmail.com"
+      "name": "leiko",
+      "email": "max.tricoire@gmail.com"
     }
   ]
 }
