--- a/core/kevoree-resolvers/package.json
+++ b/core/kevoree-resolvers/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "kevoree-resolvers",
-  "version": "0.0.4",
-  "description": "Standard Kevoree Javascript resolvers",
-  "main": "./kevoree-resolvers.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kevoree/kevoree-js"
-  },
-  "keywords": [
-    "kevoree",
-    "resolver",
-    "npm",
-    "file"
-  ],
-  "author": "Maxime Tricoire <max.tricoire@gmail.com>",
-  "license": "LGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/kevoree/kevoree-js/issues"
-  },
-  "homepage": "https://github.com/kevoree/kevoree-js",
-  "dependencies": {
-    "kevoree-commons": "0.0.1",
-    "kevoree-library": "*",
-    "npmi": "0.0.5"
-  }
+    "name": "kevoree-resolvers",
+    "version": "0.0.4",
+    "description": "Standard Kevoree Javascript resolvers",
+    "main": "./kevoree-resolvers.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kevoree/kevoree-js"
+    },
+    "keywords": [
+        "kevoree",
+        "resolver",
+        "npm",
+        "file"
+    ],
+    "author": "Maxime Tricoire <max.tricoire@gmail.com>",
+    "license": "LGPL-3.0",
+    "bugs": {
+        "url": "https://github.com/kevoree/kevoree-js/issues"
+    },
+    "homepage": "https://github.com/kevoree/kevoree-js",
+    "dependencies": {
+        "kevoree-commons": "0.0.1",
+        "kevoree-library": "*",
+        "npmi": "0.0.5",
+        "npm": "1.4.4"
+    }
 }
