--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "0.0.8",
+  "version": "0.0.11-SNAPSHOT-build2",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -20,7 +20,8 @@
   "optionalDependencies": {},
   "dependencies": {
     "pseudoclass": "0.2.6",
-    "kevoree-commons": "0.0.1"
+    "kevoree-commons": "0.0.1",
+    "kevoree-library": "*"
   },
   "license": "LGPL-3.0"
 }
