--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-core",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Kevoree Core",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-core.js",
@@ -20,8 +20,8 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-library": "*",
-    "kevoree-commons": "0.0.2",
+    "kevoree-library": "0.1.0",
+    "kevoree-commons": "0.1.0",
     "async": "0.2.9",
     "pseudoclass": "0.2.6"
   },
