--- a/org.kevoree.model.js/pom.xml
+++ b/org.kevoree.model.js/pom.xml
@@ -9,14 +9,9 @@
 
     <properties>
         <metamodel.ecore>${basedir}/target/metamodel/kevoree.ecore</metamodel.ecore>
+        <kmf.version>1.9.12-SNAPSHOT</kmf.version>
+        <kevoree.version>3.4.2-SNAPSHOT</kevoree.version>
     </properties>
-
-    <parent>
-        <groupId>org.kevoree.js</groupId>
-        <artifactId>org.kevoree.js.root</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
 
     <dependencies>
         <dependency>
@@ -106,4 +101,78 @@
             </plugin>
         </plugins>
     </build>
+
+        <scm>
+        <connection>scm:git:git@github.com:kevoree/kevoree-js.git</connection>
+        <developerConnection>scm:git:git@github.com:kevoree/kevoree-js.git</developerConnection>
+        <url>http://github.com/kevoree/kevoree-js.git</url>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>
+                GNU Library or Lesser General Public License (LGPL)
+            </name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Francois Fouquet</name>
+            <id>francois.fouquet</id>
+            <email>fouquet.f@gmail.com</email>
+            <roles>
+                <role>admin</role>
+                <role>developer</role>
+            </roles>
+            <timezone>+2</timezone>
+        </developer>
+        <developer>
+            <name>Maxime Tricoire</name>
+            <id>maxime.tricoire</id>
+            <email>max.tricoire@gmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>+2</timezone>
+        </developer>
+        <developer>
+            <name>Erwan Daubert</name>
+            <id>erwan.daubert</id>
+            <email>erwan.daubert@gmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>+2</timezone>
+        </developer>
+        <developer>
+            <name>Gregory Nain</name>
+            <id>gregory.nain</id>
+            <email>gregory.nain@uni.lu</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>+2</timezone>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <repository>
+            <id>kevoree.oss.release</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>kevoree.oss.snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>oss.sontype.org</id>
+            <name>sonatype</name>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+    </repositories>
 </project>
