--- a/tools/kevoree-kevscript/package.json
+++ b/tools/kevoree-kevscript/package.json
@@ -27,10 +27,10 @@
     "pseudoclass": "~0.2.6",
     "optimist": "~0.6.0",
     "async": "~0.2.9",
-    "kevoree-library": "*",
-    "kevoree-kotlin": "0.0.3",
-    "kevoree-commons": "0.0.2",
-    "kevoree-resolvers": "0.0.6"
+    "kevoree-library": "0.1.0",
+    "kevoree-kotlin": "0.1.0",
+    "kevoree-commons": "0.1.0",
+    "kevoree-resolvers": "0.1.0"
   },
   "devDependencies": {
     "browserify": "~2.35.2",
