--- a/platform/browser/package.json
+++ b/platform/browser/package.json
@@ -16,8 +16,8 @@
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL3.0",
   "dependencies": {
-    "kevoree-nodejs-runtime": "0.0.5",
-    "kevoree-model-sync": "0.0.4",
+    "kevoree-nodejs-runtime": "0.1.0",
+    "kevoree-model-sync": "0.1.0",
     "express": "~3.4.0",
     "ejs": "~0.8.4",
     "adm-zip": "~0.4.3",
@@ -27,10 +27,10 @@
     "jade": "~0.35.0",
     "brfs": "0.0.8",
     "connect": "~2.11.0",
-    "kevoree-library": "*",
-    "kevoree-core": "0.0.4",
-    "kevoree-kotlin": "0.0.3",
-    "kevoree-commons": "0.0.2",
+    "kevoree-library": "0.1.0",
+    "kevoree-core": "0.1.0",
+    "kevoree-kotlin": "0.1.0",
+    "kevoree-commons": "0.1.0",
     "pseudoclass": "0.2.6",
     "async": "~0.2.9",
     "date-format-lite": "~0.5.0",
