--- a/tools/kevoree-web-editor/package.json
+++ b/tools/kevoree-web-editor/package.json
@@ -10,14 +10,14 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "kevoree-web-editor-client": "0.0.13",
+    "kevoree-web-editor-client": "0.1.0",
     "express": "3.1.1",
     "jade": "~1.1.0",
     "java": "0.2.3",
     "mocha": "1.12.0",
     "requirejs": "2.1.8",
     "xml2js": "0.2.8",
-    "kevoree-library": "*",
+    "kevoree-library": "0.1.0",
     "kevoree-model-sync": "0.1.0",
     "npm": "1.3.18",
     "async": "~0.2.9",
