--- a/tools/kevoree-web-editor/package.json
+++ b/tools/kevoree-web-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-web-editor",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./app.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "kevoree-web-editor-client": "0.0.13",
+    "kevoree-web-editor-client": "*",
     "express": "3.1.1",
     "jade": "~1.1.0",
     "java": "0.2.3",
