--- a/platform/browser/client/bower.json
+++ b/platform/browser/client/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "jquery": "~1.10.2"
+    "jquery": "~1.10.2",
+    "hogan": "~3.0.0"
   },
   "devDependencies": {}
 }
