--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -1,7 +1,13 @@
 {
   "name": "client",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "pseudoclass": "^1.0.0",
+    "kevoree-library": "^0.1.3",
+    "kevoree-core": "^0.1.3",
+    "kevoree-commons": "^0.1.3",
+    "async": "^0.2.10"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
@@ -24,7 +30,10 @@
     "grunt-concurrent": "~0.4.0",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "browserify": "^3.32.1",
+    "grunt-browserify": "^1.3.1",
+    "grunt-contrib-hogan": "^0.2.4"
   },
   "engines": {
     "node": ">=0.8.0"
