--- a/platform/browser/client/bower.json
+++ b/platform/browser/client/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "jquery": "~1.10.2",
-    "hogan": "~3.0.0"
+    "hogan": "~3.0.0",
+    "jszip": "~2.0.0"
   },
   "devDependencies": {}
 }
