--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "nw",
+  "name": "webapp",
   "version": "0.0.0",
-  "description": "",
-  "main": "Gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-jshint": "~0.7.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-bower-install": "~1.0.0",
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-rev": "~0.1.0",
+    "grunt-autoprefixer": "~0.5.0",
+    "grunt-usemin": "~2.0.0",
+    "grunt-mocha": "~0.4.0",
+    "grunt-newer": "~0.6.0",
+    "grunt-svgmin": "~0.2.0",
+    "grunt-concurrent": "~0.4.0",
     "load-grunt-tasks": "^0.4.0",
-    "grunt": "^0.4.4",
-    "grunt-node-webkit-builder": "^0.1.18"
+    "time-grunt": "~0.2.0",
+    "jshint-stylish": "~0.1.3",
+    "grunt-node-webkit-builder": "^0.1.18",
+    "grunt-contrib-hogan": "^0.2.4",
+    "npmi": "0.0.6"
+  },
+  "engines": {
+    "node": ">=0.8.0"
   }
 }
