--- a/platform/nw/app/package.json
+++ b/platform/nw/app/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "kevoree-browser-runtime",
+    "name": "kevoree-nw-runtime",
     "main": "index.html",
     "version": "0.1.0",
+    "private": true,
     "single-instance": false,
     "window": {
         "frame": true,
