--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "webapp",
-  "version": "0.0.0",
+  "name": "kevoree-nw-runtime",
+  "version": "0.1.3",
+  "private": true,
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
