--- a/platform/nw/app/package.json
+++ b/platform/nw/app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kevoree-nw-runtime",
+    "name": "kevoree-browser-runtime",
     "main": "index.html",
     "version": "0.1.0",
     "private": true,
