--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -1,11 +1,11 @@
 {
   "name": "client",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "dependencies": {
     "pseudoclass": "^1.0.0",
-    "kevoree-library": "^0.1.3",
-    "kevoree-core": "^0.1.3",
-    "kevoree-commons": "^0.1.3",
+    "kevoree-library": "0.2.0",
+    "kevoree-core": "0.2.0",
+    "kevoree-commons": "0.2.0",
     "async": "^0.2.10"
   },
   "devDependencies": {
