--- a/platform/nodejs/package.json
+++ b/platform/nodejs/package.json
@@ -1,20 +1,20 @@
 {
   "name": "kevoree-nodejs-runtime",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "kevoree-nodejs-runtime.js",
   "scripts": {
     "start": "node cli.js"
   },
   "dependencies": {
-    "kevoree-core": "0.1.3",
-    "kevoree-library": "*",
-    "kevoree-commons": "0.1.3",
+    "kevoree-core": "0.2.0",
+    "kevoree-library": "0.2.0",
+    "kevoree-commons": "0.2.0",
     "pseudoclass": "0.2.6",
     "npm": "1.4.4",
     "optimist": "~0.6.0",
-    "kevoree-kevscript": "0.1.3",
-    "kevoree-resolvers": "0.1.3"
+    "kevoree-kevscript": "0.2.0",
+    "kevoree-resolvers": "0.2.0"
   },
   "license": "LGPL-3.0"
 }
