--- a/platform/nw/app/package.json
+++ b/platform/nw/app/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "kevoree-browser-runtime",
-    "main": "index.html",
-    "version": "0.1.0",
-    "private": true,
-    "single-instance": false,
-    "window": {
-        "frame": true,
-        "toolbar": false,
-        "position": "center",
-        "width": 1200,
-        "height": 800
-    },
-    "dependencies": {
-        "pseudoclass": "^1.0.0",
-        "kevoree-library": "^0.1.3",
-        "kevoree-core": "^0.1.3",
-        "kevoree-commons": "^0.1.3",
-        "async": "^0.2.10",
-        "kevoree-kevscript": "^0.1.3",
-        "kevoree-resolvers": "^0.1.3",
-        "npmi": "0.0.5"
-    }
+  "name": "kevoree-browser-runtime",
+  "main": "index.html",
+  "version": "0.2.0",
+  "private": true,
+  "single-instance": false,
+  "window": {
+    "frame": true,
+    "toolbar": false,
+    "position": "center",
+    "width": 1200,
+    "height": 800
+  },
+  "dependencies": {
+    "pseudoclass": "^1.0.0",
+    "kevoree-library": "0.2.0",
+    "kevoree-core": "0.2.0",
+    "kevoree-commons": "0.2.0",
+    "async": "^0.2.10",
+    "kevoree-kevscript": "0.2.0",
+    "kevoree-resolvers": "0.2.0",
+    "npmi": "0.0.5"
+  }
 }
