--- a/tools/kevoree-web-editor/package.json
+++ b/tools/kevoree-web-editor/package.json
@@ -10,20 +10,20 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "kevoree-web-editor-client": "*",
+    "async": "~0.2.9",
+    "ejs": "~0.8.5",
     "express": "3.1.1",
     "jade": "~1.1.0",
     "java": "0.2.3",
-    "mocha": "1.12.0",
-    "requirejs": "2.1.8",
-    "xml2js": "0.2.8",
     "kevoree-library": "0.2.6",
     "kevoree-model-sync": "0.2.6",
+    "kevoree-web-editor-client": "*",
+    "mocha": "1.12.0",
     "npm": "1.3.18",
-    "async": "~0.2.9",
+    "requirejs": "2.1.8",
+    "rimraf": "~2.2.5",
     "semver": "~2.2.1",
-    "ejs": "~0.8.5",
-    "rimraf": "~2.2.5"
+    "xml2js": "^0.2.8"
   },
   "devDependencies": {
     "jade-amd": "~0.2.1"
