--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -26,6 +26,7 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "^0.4.0",
+    "npm": "^1.4.6",
     "npmi": "0.0.6",
     "time-grunt": "~0.2.0"
   },
