--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js",
   "dependencies": {
-    "kevoree-nodejs-runtime": "0.2.6",
+    "kevoree-nodejs-runtime": ">=0.2.6",
     "express": "^3.4.8",
-    "kevoree-library": "0.2.6",
-    "kevoree-model-sync": "0.2.6",
+    "kevoree-library": ">=0.2.6",
+    "kevoree-model-sync": ">=0.2.6",
     "tar": "^0.1.19",
     "npmi": "0.0.5",
     "rimraf": "^2.2.6",
