--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -20,8 +20,8 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-library": "0.2.6",
-    "kevoree-commons": "0.2.6",
+    "kevoree-library": ">=0.2.6",
+    "kevoree-commons": ">=0.2.6",
     "async": "0.2.9",
     "pseudoclass": "0.2.6"
   },
