--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -20,8 +20,8 @@
   "optionalDependencies": {},
   "dependencies": {
     "pseudoclass": "0.2.6",
-    "kevoree-commons": "0.2.6",
-    "kevoree-library": "0.2.6"
+    "kevoree-commons": ">=0.2.6",
+    "kevoree-library": ">=0.2.6"
   },
   "license": "LGPL-3.0"
 }
