--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -42,11 +42,11 @@
     "kevs"
   ],
   "dependencies": {
-    "kevoree-nodejs-runtime": "0.2.6",
-    "kevoree-kevscript": "0.2.6",
-    "kevoree-commons": "0.2.6",
-    "kevoree-resolvers": "0.2.6",
-    "kevoree-kotlin": "0.2.6",
-    "kevoree-library": "0.2.6"
+    "kevoree-nodejs-runtime": ">=0.2.6",
+    "kevoree-kevscript": ">=0.2.6",
+    "kevoree-commons": ">=0.2.6",
+    "kevoree-resolvers": ">=0.2.6",
+    "kevoree-kotlin": ">=0.2.6",
+    "kevoree-library": ">=0.2.6"
   }
 }
