--- a/tools/kevoree-merger/package.json
+++ b/tools/kevoree-merger/package.json
@@ -11,6 +11,6 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "optimist": "~0.6.0",
-    "kevoree-library": "0.2.6"
+    "kevoree-library": ">=0.2.6"
   }
 }
