--- a/tools/kevoree-web-editor/package.json
+++ b/tools/kevoree-web-editor/package.json
@@ -15,8 +15,8 @@
     "express": "3.1.1",
     "jade": "~1.1.0",
     "java": "0.2.3",
-    "kevoree-library": "0.2.6",
-    "kevoree-model-sync": "0.2.6",
+    "kevoree-library": ">=0.2.6",
+    "kevoree-model-sync": ">=0.2.6",
     "kevoree-web-editor-client": "*",
     "mocha": "1.12.0",
     "npm": "1.3.18",
