--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -6,6 +6,7 @@
     "postinstall": "cd app && npm install"
   },
   "devDependencies": {
+    "bower": "^1.3.1",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-bower-install": "~1.0.0",
@@ -21,7 +22,6 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-newer": "~0.6.0",
-    "grunt-node-webkit-builder": "^0.1.18",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
