--- a/core/kevoree-commons/package.json
+++ b/core/kevoree-commons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-commons",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Kevoree Commons - Shared libraries/APIs",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-commons.js",
@@ -24,8 +24,8 @@
   },
   "optionalDependencies": {},
   "dependencies": {
-    "pseudoclass": "0.2.6",
-    "colors": "~0.6.2"
+    "chalk": "^0.4.0",
+    "pseudoclass": "0.2.6"
   },
   "license": "LGPL-3.0"
 }
