--- a/tools/kwe-services/package.json
+++ b/tools/kwe-services/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kevoree-web-editor",
+  "name": "kwe-services",
   "version": "0.4.12",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./app.js",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/maxleiko/kev-web-editor.git"
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
   "license": "LGPL3.0",
   "engines": {
