--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.10",
   "private": true,
   "scripts": {
-    "postinstall": "cd app && npm install"
+    "postinstall": "bower install && cd app && npm install"
   },
   "devDependencies": {
     "bower": "^1.3.1",
