--- a/platform/nodejs/package.json
+++ b/platform/nodejs/package.json
@@ -1,8 +1,11 @@
 {
   "name": "kevoree-nodejs-runtime",
-  "version": "0.4.12",
+  "version": "0.4.13",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "kevoree-nodejs-runtime.js",
+  "bin": {
+    "kevoreejs": "./cli.js"
+  },
   "scripts": {
     "start": "node cli.js"
   },
