--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -13,6 +13,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compress": "^0.8.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
