--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -1,16 +1,20 @@
 {
   "name": "kevoree-gen-model",
-  "version": "0.4.11",
+  "version": "0.5.0-SNAPSHOT",
   "description": "Kevoree Generate Model Tool - Generates a Kevoree model from a kevoree-entity like module",
   "main": "kevoree-gen-model.js",
+  "bin": {
+    "kevoree-gen-model": "./cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "chalk": "^0.4.0",
     "kevoree-entities": ">=0.4.10",
     "kevoree-library": ">=0.4.10",
-    "optimist": ">= 0.6.0",
-    "npm": "1.4.4"
+    "npm": "1.4.4",
+    "optimist": ">= 0.6.0"
   },
   "devDependencies": {
     "pseudoclass": "0.2.6"
