--- a/tools/grunt-kevoree-genmodel/package.json
+++ b/tools/grunt-kevoree-genmodel/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree-genmodel",
   "description": "Generates a Kevoree model by parsing current Kevoree-entity module project",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -30,13 +30,15 @@
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "kevoree-gen-model": "^0.5.0-SNAPSHOT",
-    "kevoree-library": "^0.4.10"
+    "kevoree-library": ">=0.5.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.4"
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "kevoree-gen-model": ">=0.5.0"
+  }
 }
