--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "client",
-  "version": "0.4.10",
+  "name": "kevoree-browser-runtime",
+  "version": "0.5.0",
   "dependencies": {
-    "pseudoclass": "^1.0.0",
-    "kevoree-library": ">=0.4.10",
-    "kevoree-core": ">=0.4.10",
-    "kevoree-commons": ">=0.4.10",
-    "async": "^0.2.10"
+    "async": "^0.2.10",
+    "kevoree-commons": ">=0.5.0",
+    "kevoree-core": ">=0.5.0",
+    "kevoree-kotlin": ">=0.5.0",
+    "kevoree-library": ">=0.5.0",
+    "pseudoclass": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
