--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -7,6 +7,7 @@
     "kevoree-core": ">=0.5.0",
     "kevoree-kotlin": ">=0.5.0",
     "kevoree-library": ">=0.5.0",
+    "node-uuid": "^1.4.1",
     "pseudoclass": "^1.0.0"
   },
   "devDependencies": {
