--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -8,7 +8,8 @@
     "kevoree-kotlin": ">=0.5.0",
     "kevoree-library": ">=0.5.0",
     "node-uuid": "^1.4.1",
-    "pseudoclass": "^1.0.0"
+    "pseudoclass": "^1.0.0",
+    "ws": "^0.4.31"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
