--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -31,6 +31,8 @@
     "kevoree-model-sync": ">=0.5.0",
     "kevoree-nodejs-runtime": ">=0.5.0",
     "ncp": "^0.5.0",
-    "npmi": "0.0.5"
+    "npmi": "0.0.5",
+    "rimraf": "^2.2.6",
+    "ws": "^0.4.31"
   }
 }
