--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kevoree-browser-runtime",
   "version": "0.5.0",
+  "private": true,
   "dependencies": {
     "async": "^0.2.10",
     "kevoree-commons": ">=0.5.0",
