--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kevoree-browser-runtime-server",
-  "version": "0.5.0",
+  "version": "0.5.1",
+  "private": true,
   "description": "Kevoree Browser Runtime - Web Services",
   "main": "server.js",
   "scripts": {
