--- a/platform/nw/package.json
+++ b/platform/nw/package.json
@@ -3,12 +3,14 @@
   "version": "0.5.0",
   "private": true,
   "scripts": {
-    "postinstall": "bower install && cd app && npm install"
+    "postinstall": "./node_modules/bower/bin/bower install && cd app && npm install"
   },
   "devDependencies": {
+    "bower": "^1.3.2",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-bower-install": "~1.0.0",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "^0.8.0",
