--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "kevoree-browser-runtime",
   "version": "0.5.0",
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
+  },
   "private": true,
   "dependencies": {
     "async": "^0.2.10",
@@ -13,31 +16,33 @@
     "ws": "^0.4.31"
   },
   "devDependencies": {
+    "bower": "^1.3.2",
+    "browserify": "^3.32.1",
     "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-bower-install": "~0.7.0",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-rev": "~0.1.0",
     "grunt-autoprefixer": "~0.5.0",
-    "grunt-usemin": "~2.0.0",
+    "grunt-bower-install": "~0.7.0",
+    "grunt-browserify": "^1.3.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-concurrent": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-hogan": "^0.2.4",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-jshint": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.2",
     "grunt-mocha": "~0.4.0",
     "grunt-newer": "~0.6.0",
+    "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
-    "grunt-concurrent": "~0.4.0",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.0",
+    "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
-    "browserify": "^3.32.1",
-    "grunt-browserify": "^1.3.1",
-    "grunt-contrib-hogan": "^0.2.4"
+    "load-grunt-tasks": "~0.2.0",
+    "time-grunt": "~0.2.0"
   },
   "engines": {
     "node": ">=0.8.0"
