kevoree-browser-runtime (server) using kevscript conf for server-node

--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -26,11 +26,14 @@
   "homepage": "https://github.com/kevoree/kevoree-js",
   "dependencies": {
     "adm-zip": "^0.4.4",
+    "connect": "^2.14.4",
     "ejs": "^0.8.5",
-    "express": "^3.4.8",
+    "express": "^4.0.0",
+    "kevoree-kevscript": "^0.5.0",
     "kevoree-library": ">=0.5.0",
     "kevoree-model-sync": ">=0.5.0",
     "kevoree-nodejs-runtime": ">=0.5.0",
+    "kevoree-resolvers": "^0.5.0",
     "ncp": "^0.5.0",
     "npmi": "0.0.5",
     "rimraf": "^2.2.6",
