--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -13,6 +13,7 @@
     "kevoree-library": ">=0.5.0",
     "node-uuid": "^1.4.1",
     "pseudoclass": "^1.0.0",
+    "underscore.string": "^2.3.3",
     "ws": "^0.4.31"
   },
   "devDependencies": {
