--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-browser-runtime-server",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "private": true,
   "description": "Kevoree Browser Runtime - Web Services",
   "main": "server.js",
@@ -26,11 +26,11 @@
     "connect": "^2.14.4",
     "ejs": "^0.8.5",
     "express": "^4.0.0",
-    "kevoree-kevscript": "^0.5.0",
-    "kevoree-library": ">=0.5.0",
-    "kevoree-model-sync": ">=0.5.0",
-    "kevoree-nodejs-runtime": ">=0.5.0",
-    "kevoree-resolvers": "^0.5.0",
+    "kevoree-kevscript": ">=0.6.0",
+    "kevoree-library": ">=0.6.0",
+    "kevoree-model-sync": ">=0.6.0",
+    "kevoree-nodejs-runtime": ">=0.6.0",
+    "kevoree-resolvers": ">=0.6.0",
     "mustache": "^0.8.1",
     "ncp": "^0.5.0",
     "npmi": "0.0.5",
