--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -9,7 +9,7 @@
     "async": "^0.2.10",
     "kevoree-commons": ">=0.6.0",
     "kevoree-core": ">=0.6.0",
-    "kevoree-kotlin": ">=0.6.0",
+    "kevoree-kotlin": "^0.6.0",
     "kevoree-library": ">=0.6.0",
     "node-uuid": "^1.4.1",
     "pseudoclass": "^1.0.0",
