--- a/extras/kevoree-ws-server/package.json
+++ b/extras/kevoree-ws-server/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js",
   "dependencies": {
+    "minimist": "0.0.8",
     "ws": "^0.4.31"
   },
   "devDependencies": {}
