kevoree-browser-runtime: update kevoree-model-sync version to handle path to WebSocket URi

--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -28,7 +28,7 @@
     "express": "^4.0.0",
     "kevoree-kevscript": ">=0.6.0",
     "kevoree-library": ">=0.6.0",
-    "kevoree-model-sync": ">=0.6.0",
+    "kevoree-model-sync": "^0.6.1",
     "kevoree-nodejs-runtime": ">=0.6.0",
     "kevoree-resolvers": ">=0.6.0",
     "mustache": "^0.8.1",
