--- a/platform/nw/bower.json
+++ b/platform/nw/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "jquery": "~2.1.0",
-    "hogan": "~3.0.0"
+    "hogan": "3.0.0"
   },
   "devDependencies": {}
 }
