--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "async": "^0.2.10",
     "kevoree-commons": ">=0.7.0",
-    "kevoree-core": ">=0.7.0",
+    "kevoree-core": "^0.7.2",
     "kevoree-kotlin": ">=0.7.0",
     "kevoree-library": ">=0.7.0",
     "node-uuid": "^1.4.1",
