--- a/platform/nodejs/package.json
+++ b/platform/nodejs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-nodejs-runtime",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "kevoree-nodejs-runtime.js",
   "bin": {
@@ -18,5 +18,26 @@
     "kevoree-kevscript": ">=0.7.0",
     "kevoree-resolvers": ">=0.7.0"
   },
-  "license": "LGPL-3.0"
+  "license": "LGPL-3.0",
+  "description": "TODO",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:kevoree/kevoree-js.git"
+  },
+  "keywords": [
+    "kevoree",
+    "runtime",
+    "platform",
+    "kevoree-cli",
+    "kevoreejs",
+    "runjs"
+  ],
+  "bugs": {
+    "url": "https://github.com/kevoree/kevoree-js/issues"
+  },
+  "homepage": "https://github.com/kevoree/kevoree-js"
 }
