--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-kevoree",
   "description": "Automatically runs kevoree runtime (works like mvn kev:run plugin)",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "homepage": "https://github.com/kevoree/kevoree-js",
   "author": {
     "name": "Maxime Tricoire",
@@ -45,6 +45,7 @@
     "kevoree-commons": ">=0.7.0",
     "kevoree-kevscript": ">=0.7.0",
     "kevoree-nodejs-runtime": ">=0.7.0",
-    "kevoree-resolvers": ">=0.7.0"
+    "kevoree-resolvers": ">=0.7.0",
+    "npmi": "0.0.10"
   }
 }
