--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -1,16 +1,16 @@
 {
   "name": "kevoree-browser-runtime",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "private": true,
   "dependencies": {
     "async": "^0.2.10",
-    "kevoree-commons": ">=0.7.0",
-    "kevoree-core": "^0.7.2",
-    "kevoree-kotlin": ">=0.7.0",
-    "kevoree-library": ">=0.7.0",
+    "kevoree-commons": ">=0.8.0",
+    "kevoree-core": ">=0.8.0",
+    "kevoree-kotlin": ">=0.8.0",
+    "kevoree-library": ">=0.8.0",
     "node-uuid": "^1.4.1",
     "pseudoclass": "^1.0.0",
     "underscore.string": "^2.3.3",
