--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -19,9 +19,9 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "pseudoclass": "0.2.6",
     "kevoree-commons": ">=0.8.0",
-    "kevoree-library": ">=0.8.0"
+    "kevoree-library": ">=0.8.0",
+    "pseudoclass": "^1.0.1"
   },
   "license": "LGPL-3.0"
 }
