--- a/core/kevoree-commons/package.json
+++ b/core/kevoree-commons/package.json
@@ -25,7 +25,7 @@
   "optionalDependencies": {},
   "dependencies": {
     "chalk": "^0.4.0",
-    "pseudoclass": "0.2.6"
+    "pseudoclass": "^1.0.1"
   },
   "license": "LGPL-3.0"
 }
