--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -13,7 +13,7 @@
     "chalk": "^0.4.0",
     "kevoree-entities": ">=0.8.0",
     "kevoree-library": ">=0.8.0",
-    "npm": "1.4.4",
+    "npm": "^1.4.4",
     "optimist": ">= 0.6.0"
   },
   "devDependencies": {
