--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -7,10 +7,10 @@
   "private": true,
   "dependencies": {
     "async": "^0.2.10",
-    "kevoree-commons": ">=0.9.0",
-    "kevoree-core": ">=0.9.0",
-    "kevoree-kotlin": ">=0.9.0",
-    "kevoree-library": ">=0.9.0",
+    "kevoree-commons": "^0.9.0",
+    "kevoree-core": "^0.9.0",
+    "kevoree-kotlin": "^0.9.0",
+    "kevoree-library": "^0.9.0",
     "node-uuid": "^1.4.1",
     "pseudoclass": "^1.0.1",
     "underscore.string": "^2.3.3",
