--- a/platform/browser/server/package.json
+++ b/platform/browser/server/package.json
@@ -29,10 +29,10 @@
     "connect": "^2.14.4",
     "ejs": "^0.8.5",
     "express": "^4.0.0",
-    "kevoree-kevscript": ">=0.9.0",
-    "kevoree-library": ">=0.9.0",
-    "kevoree-nodejs-runtime": ">=0.9.0",
-    "kevoree-resolvers": ">=0.9.0",
+    "kevoree-kevscript": "^0.9.0",
+    "kevoree-library": "^0.9.0",
+    "kevoree-nodejs-runtime": "^0.9.0",
+    "kevoree-resolvers": "^0.9.0",
     "mustache": "^0.8.1",
     "ncp": "^0.5.0",
     "npmi": "0.0.5",
