--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -20,8 +20,8 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-library": ">=0.9.0",
-    "kevoree-commons": ">=0.9.0",
+    "kevoree-library": "^0.9.0",
+    "kevoree-commons": "^0.9.0",
     "async": "0.2.9",
     "pseudoclass": "^1.0.1"
   },
