--- a/core/kevoree-library/package.json
+++ b/core/kevoree-library/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-kotlin": ">=0.9.0"
+    "kevoree-kotlin": "^0.9.0"
   },
   "license": "LGPL-3.0"
 }
