--- a/platform/nodejs/package.json
+++ b/platform/nodejs/package.json
@@ -10,11 +10,11 @@
     "start": "node cli.js"
   },
   "dependencies": {
-    "kevoree-commons": ">=0.9.0",
-    "kevoree-core": ">=0.9.0",
-    "kevoree-kevscript": ">=0.9.0",
-    "kevoree-library": ">=0.9.0",
-    "kevoree-resolvers": ">=0.9.0",
+    "kevoree-commons": "^0.9.0",
+    "kevoree-core": "^0.9.0",
+    "kevoree-kevscript": "^0.9.0",
+    "kevoree-library": "^0.9.0",
+    "kevoree-resolvers": "^0.9.0",
     "optimist": "~0.6.0",
     "pseudoclass": "^1.0.1"
   },
