--- a/platform/nw/app/package.json
+++ b/platform/nw/app/package.json
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "async": "^0.2.10",
-    "kevoree-commons": ">=0.9.0",
-    "kevoree-core": ">=0.9.0",
-    "kevoree-kevscript": ">=0.9.0",
-    "kevoree-library": ">=0.9.0",
-    "kevoree-resolvers": ">=0.9.0",
+    "kevoree-commons": "^0.9.0",
+    "kevoree-core": "^0.9.0",
+    "kevoree-kevscript": "^0.9.0",
+    "kevoree-library": "^0.9.0",
+    "kevoree-resolvers": "^0.9.0",
     "npmi": "^0.0.7",
     "optimist": "^0.6.1",
     "pseudoclass": "^1.0.0"
