--- a/tools/grunt-kevoree-genmodel/package.json
+++ b/tools/grunt-kevoree-genmodel/package.json
@@ -30,7 +30,7 @@
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "kevoree-library": ">=0.9.0"
+    "kevoree-library": "^0.9.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.4"
@@ -39,6 +39,6 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "kevoree-gen-model": ">=0.9.0"
+    "kevoree-gen-model": "^0.9.0"
   }
 }
