--- a/tools/grunt-kevoree/package.json
+++ b/tools/grunt-kevoree/package.json
@@ -42,10 +42,10 @@
     "kevs"
   ],
   "dependencies": {
-    "kevoree-commons": ">=0.9.0",
-    "kevoree-kevscript": ">=0.9.0",
-    "kevoree-nodejs-runtime": ">=0.9.0",
-    "kevoree-resolvers": ">=0.9.0",
+    "kevoree-commons": "^0.9.0",
+    "kevoree-kevscript": "^0.9.0",
+    "kevoree-nodejs-runtime": "^0.9.0",
+    "kevoree-resolvers": "^0.9.0",
     "npmi": "0.0.10"
   }
 }
