--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "chalk": "^0.4.0",
-    "kevoree-entities": ">=0.9.0",
-    "kevoree-library": ">=0.9.0",
+    "kevoree-entities": "^0.9.0",
+    "kevoree-library": "^0.9.0",
     "npm": "^1.4.4",
     "optimist": ">= 0.6.0"
   },
