--- a/tools/kevoree-kevscript/package.json
+++ b/tools/kevoree-kevscript/package.json
@@ -25,10 +25,10 @@
   "homepage": "https://github.com/kevoree/kevoree-js",
   "dependencies": {
     "async": "~0.2.9",
-    "kevoree-commons": ">=0.9.0",
-    "kevoree-kotlin": ">=0.9.0",
-    "kevoree-library": ">=0.9.0",
-    "kevoree-resolvers": ">=0.9.0",
+    "kevoree-commons": "^0.9.0",
+    "kevoree-kotlin": "^0.9.0",
+    "kevoree-library": "^0.9.0",
+    "kevoree-resolvers": "^0.9.0",
     "optimist": "~0.6.0",
     "pseudoclass": "^1.0.1",
     "waxeye": "^0.8.1"
