--- a/org.kevoree.model.js/pom.xml
+++ b/org.kevoree.model.js/pom.xml
@@ -8,9 +8,9 @@
     <version>1.9.6</version>
 
     <properties>
-        <metamodel.ecore>${basedir}/target/metamodel/kevoree.ecore</metamodel.ecore>
-        <kmf.version>1.10.5-SNAPSHOT</kmf.version>
-        <kevoree.version>3.6.8</kevoree.version>
+        <metamodel>${basedir}/org.kevoree.mm</metamodel>
+        <kmf.version>3.0.0</kmf.version>
+        <!--<kevoree.version>3.6.8</kevoree.version>-->
     </properties>
 
     <dependencies>
@@ -19,41 +19,60 @@
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${kmf.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.kevoree</groupId>
-            <artifactId>org.kevoree.model</artifactId>
-            <version>${kevoree.version}</version>
-            <classifier>sources</classifier>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.kevoree</groupId>-->
+            <!--<artifactId>org.kevoree.model</artifactId>-->
+            <!--<version>${kevoree.version}</version>-->
+            <!--<classifier>sources</classifier>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.kevoree</groupId>
-                                    <artifactId>org.kevoree.model</artifactId>
-                                    <version>${kevoree.version}</version>
-                                    <classifier>sources</classifier>
-                                    <type>jar</type>
-                                    <outputDirectory>${basedir}/target/metamodel/</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-dependency-plugin</artifactId>-->
+                <!--<version>2.8</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>initialize</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>unpack</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<artifactItems>-->
+                                <!--<artifactItem>-->
+                                    <!--<groupId>org.kevoree</groupId>-->
+                                    <!--<artifactId>org.kevoree.model</artifactId>-->
+                                    <!--<version>${kevoree.version}</version>-->
+                                    <!--<classifier>sources</classifier>-->
+                                    <!--<type>jar</type>-->
+                                    <!--<outputDirectory>${basedir}/target/metamodel/</outputDirectory>-->
+                                <!--</artifactItem>-->
+                            <!--</artifactItems>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.kevoree.modeling</groupId>-->
+                <!--<artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>-->
+                <!--<version>${kmf.version}</version>-->
+                <!--<extensions>true</extensions>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>ModelGen</id>-->
+                        <!--<goals>-->
+                            <!--<goal>generate</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<ecore>${metamodel}</ecore>-->
+                            <!--<js>true</js>-->
+                            <!--<events>true</events>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>
@@ -65,37 +84,11 @@
                         <goals>
                             <goal>generate</goal>
                         </goals>
+                        <phase>process-sources</phase>
                         <configuration>
-                            <ecore>${metamodel.ecore}</ecore>
-                            <packagePrefix>org</packagePrefix>
+                            <ecore>${metamodel}</ecore>
                             <js>true</js>
                             <events>true</events>
-                            <!--<selector>true</selector>-->
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/classes</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/target/js/</directory>
-                                    <filtering>true</filtering>
-                                    <includes>
-                                        <include>*.js</include>
-                                    </includes>
-                                </resource>
-                            </resources>
                         </configuration>
                     </execution>
                 </executions>
@@ -171,7 +164,7 @@
 
     <repositories>
         <repository>
-            <id>oss.sontype.org</id>
+            <id>oss.sonatype.org</id>
             <name>sonatype</name>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
